style : 개행 및 스타일을 컨벤션에 따라 조정